syntax = "proto3";

option java_multiple_files=true;
option java_package = "edu.pict.testCaseService";
option java_outer_classname="TestcaseServiceProto";

service TestCaseService  {
  rpc storeTestCases (TestCases) returns (TestCases);

  rpc getTestCasesByQuestionId(TestCaseRequest) returns (TestCaseResponse);
  rpc getVisibleTestCasesByQuestionId (TestCaseRequest) returns (TestCaseResponse);

  rpc deleteTestCasesByQuestionID(DeleteTestCaseRequest) returns (DeleteTestCaseResponse);
}

message TestCase {
  string input = 1;
  string expectedOutput = 2;
  bool hidden = 3;
}

message TestCases {
  string questionId = 1;
  repeated TestCase testcases = 2;
}

message TestCaseRequest {
  string questionId = 1;
}

message TestCaseResponse {
  repeated TestCase testcases = 1;
}

message DeleteTestCaseRequest {
  string questionId = 1;
}

message DeleteTestCaseResponse {}
